<resources>
    <string name="app_name">Seller Management</string>
    <string name="text_accounts">Your Inventory</string>
    <string name="hint_name">Name</string>
    <string name="hint_email">Email</string>
    <string name="hint_password">Password</string>
    <string name="hint_confirm_password">Confirm Password</string>
    <string name="text_login">Login</string>
    <string name="text_register">Register</string>
    <string name="error_message_name">Enter Full Name</string>
    <string name="error_message_email">Enter Valid Email</string>
    <string name="error_message_age">Enter Age</string>
    <string name="error_message_password">Enter Password</string>
    <string name="success_message">Registration Successful</string>
    <string name="text_not_member">No account yet? Create one</string>
    <string name="text_already_member">Already a member? Login</string>
    <string name="error_email_exists">Email Already Exists</string>
    <string name="error_password_match">Password Does Not Matches</string>
    <string name="error_valid_email_password">Wrong Email or Password</string>
    <string name="action_settings">Settings</string>
    <string name="text_hello">Hello,</string>
    <string name="text_title">Seller Panel Hub</string>
    <string name="add_product">Add Product</string>
    <string name="edit_product">Edit</string>
    <string name="delete_product">Delete</string>
    <string name="product_name">Product Name</string>
    <string name="quantity">Quantity</string>
    <string name="amount">Amount</string>
    <string name="shipping">Shipping</string>
    <string name="reset">Reset</string>
    <string name="submit">Submit</string>
    <string name="save">Save</string>
    <string name="title_activity_maps">Map</string>
</resources>
