<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:theme="@style/ProductPageTheme"
    android:orientation="vertical">

    <include layout="@layout/toolbar_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"></include>

    <android.support.v7.widget.AppCompatImageView
        android:id="@+id/imgView"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_below="@+id/btnSelectImage"
        android:layout_marginBottom="5dp" />

    <Button
        android:id="@+id/btnSelectImage"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_marginBottom="5dp"
        android:text="Select Image" />

    <EditText
        android:id="@+id/product_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/product_name"
        />
    <EditText
        android:id="@+id/quantity"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/quantity"/>
    <EditText
        android:id="@+id/amount"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/amount"/>
    <EditText
        android:id="@+id/shipping"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/shipping"/>
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <android.support.v7.widget.AppCompatButton
            android:id="@+id/appCompatButtonReset"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="40dp"
            android:layout_marginLeft="50dp"
            android:background="@color/colorTextHint"
            android:text="@string/reset" />

        <android.support.v7.widget.AppCompatButton
            android:id="@+id/appCompatButtonSubmit"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="40dp"
            android:layout_marginLeft="50dp"
            android:background="@color/colorTextHint"
            android:text="@string/submit" />
    </LinearLayout>



</LinearLayout>